# cute-for-idiots

./: .gitignore  CMakeLists.txt  README.md  main.cu  print_layouts.cu  roofline.ipynb  simple_gemm.cu  simple_gemm_tc.cu  tflops.ipynb  tiled_copy.cu  utils.cuh
src/: CMakeLists.txt  print_layouts.cu  simple_gemm.cu  simple_gemm_tc.cu  tiled_copy.cu  utils.cuh
